--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html lang="zh">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>智能衣橱选择</title>
+    <link rel="stylesheet" href="style.css">
+</head>
 <body>
     <h1>智能衣橱选择</h1>
 
@@ -31,6 +39,5 @@
     <button id="back-to-home">回到主頁</button>
 
     <script src="script.js"></script>
-  
 </body>
 </html>
