--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="zh">
 <head>
-     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+     <link rel="shortcut icon" href="/favicon.ico">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>智能衣橱选择</title>
+    <title>第十組-智能衣橱选择</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
