--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh">
 <head>
-     <link rel="shortcut icon" href="/favicon.ico">
+    <link rel="shortcut icon" href="/bitbug_favicon.ico">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>第十組-智能衣橱选择</title>
