--- a/index.html
+++ b/index.html
@@ -1,45 +1,205 @@
+
 <!DOCTYPE html>
-<html lang="zh">
+<html lang="en">
 <head>
-    <link rel="shortcut icon" href="/favicon.ico">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>第十組-智能衣橱选择</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <link rel="shortcut icon" href="/favicon.ico">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>渲染背景</title>
+  <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+    }
+
+    :root {
+      --color-bg1: rgb(107, 200, 255);
+      --color-bg2: rgb(243, 188, 255);
+      --color1: 188, 250, 255;
+      --color2: 114, 154, 224;
+      --color3: 174, 114, 224;
+      --color4: 200, 114, 224;
+      --color5: 102, 158, 232;
+      --color-interactive: 140, 100, 255;
+      --circle-size: 80%;
+      --blending: hard-light;
+    }
+
+    @keyframes moveInCircle {
+      0% {
+        transform: rotate(0deg);
+      }
+      50% {
+        transform: rotate(180deg);
+      }
+      100% {
+        transform: rotate(360deg);
+      }
+    }
+
+    @keyframes moveVertical {
+      0% {
+        transform: translateY(-50%);
+      }
+      50% {
+        transform: translateY(50%);
+      }
+      100% {
+        transform: translateY(-50%);
+      }
+    }
+
+    @keyframes moveHorizontal {
+      0% {
+        transform: translateX(-50%) translateY(-10%);
+      }
+      50% {
+        transform: translateX(50%) translateY(10%);
+      }
+      100% {
+        transform: translateX(-50%) translateY(-10%);
+      }
+    }
+
+    .gradient-bg {
+      width: 100vw;
+      height: 100vh;
+      position: relative;
+      overflow: hidden;
+      background: linear-gradient(40deg, var(--color-bg1), var(--color-bg2));
+      top: 0;
+      left: 0;
+
+      svg {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 0;
+        height: 0;
+      }
+
+      .gradients-container {
+        filter: url(#goo) blur(40px);
+        width: 100%;
+        height: 100%;
+      }
+
+      .g1 {
+        position: absolute;
+        background: radial-gradient(circle at center, rgba(var(--color1), 0.8) 0, rgba(var(--color1), 0) 50%) no-repeat;
+        mix-blend-mode: var(--blending);
+
+        width: var(--circle-size);
+        height: var(--circle-size);
+        top: calc(50% - var(--circle-size) / 2);
+        left: calc(50% - var(--circle-size) / 2);
+
+        transform-origin: center center;
+        animation: moveVertical 10s ease infinite;
+
+        opacity: 1;
+      }
+
+      .g2 {
+        position: absolute;
+        background: radial-gradient(circle at center, rgba(var(--color2), 0.8) 0, rgba(var(--color2), 0) 50%) no-repeat;
+        mix-blend-mode: var(--blending);
+
+        width: var(--circle-size);
+        height: var(--circle-size);
+        top: calc(50% - var(--circle-size) / 2);
+        left: calc(50% - var(--circle-size) / 2);
+
+        transform-origin: calc(50% - 400px);
+        animation: moveInCircle 20s reverse infinite;
+
+        opacity: 1;
+      }
+
+      .g3 {
+        position: absolute;
+        background: radial-gradient(circle at center, rgba(var(--color3), 0.8) 0, rgba(var(--color3), 0) 50%) no-repeat;
+        mix-blend-mode: var(--blending);
+
+        width: var(--circle-size);
+        height: var(--circle-size);
+        top: calc(50% - var(--circle-size) / 2 + 200px);
+        left: calc(50% - var(--circle-size) / 2 - 500px);
+
+        transform-origin: calc(50% + 400px);
+        animation: moveInCircle 10s linear infinite;
+
+        opacity: 1;
+      }
+
+      .g4 {
+        position: absolute;
+        background: radial-gradient(circle at center, rgba(var(--color4), 0.8) 0, rgba(var(--color4), 0) 50%) no-repeat;
+        mix-blend-mode: var(--blending);
+
+        width: var(--circle-size);
+        height: var(--circle-size);
+        top: calc(50% - var(--circle-size) / 2);
+        left: calc(50% - var(--circle-size) / 2);
+
+        transform-origin: calc(50% - 200px);
+        animation: moveHorizontal 40s ease infinite;
+
+        opacity: 0.7;
+      }
+
+      .g5 {
+        position: absolute;
+        background: radial-gradient(circle at center, rgba(var(--color5), 0.8) 0, rgba(var(--color5), 0) 50%) no-repeat;
+        mix-blend-mode: var(--blending);
+
+        width: calc(var(--circle-size) * 2);
+        height: calc(var(--circle-size) * 2);
+        top: calc(50% - var(--circle-size));
+        left: calc(50% - var(--circle-size));
+
+        transform-origin: calc(50% - 800px) calc(50% + 200px);
+        animation: moveInCircle 20s ease infinite;
+
+        opacity: 1;
+      }
+
+      .interactive {
+        position: absolute;
+        background: radial-gradient(circle at center, rgba(var(--color-interactive), 0.8) 0, rgba(var(--color-interactive), 0) 50%) no-repeat;
+        mix-blend-mode: var(--blending);
+
+        width: 100%;
+        height: 100%;
+        top: -50%;
+        left: -50%;
+
+        opacity: 0.7;
+      }
+    }
+  </style>
 </head>
 <body>
-    <h1>智能衣橱选择</h1>
 
-    <div id="first-selection" class="selection">
-        <h2>第一组选择：</h2>
-        <button class="first-btn" data-option="#f44336">紅色</button>
-        <button class="first-btn" data-option="#2196f3">藍色</button>
-        <button class="first-btn" data-option="#ffeb3b">黃色</button>
+  <div class="gradient-bg">
+    <svg xmlns="http://www.w3.org/2000/svg">
+      <defs>
+        <filter id="goo">
+          <feGaussianBlur in="SourceGraphic" stdDeviation="10" result="blur" />
+          <feColorMatrix in="blur" mode="matrix" values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 18 -8" result="goo" />
+          <feBlend in="SourceGraphic" in2="goo" />
+        </filter>
+      </defs>
+    </svg>
+    <div class="gradients-container">
+      <div class="g1"></div>
+      <div class="g2"></div>
+      <div class="g3"></div>
+      <div class="g4"></div>
+      <div class="g5"></div>
+      <div class="interactive"></div>
     </div>
+  </div>
 
-    <div id="second-selection" class="selection hidden">
-        <h2>第二组选择：</h2>
-        <button class="second-btn" data-option="寬鬆">寬鬆</button>
-        <button class="second-btn" data-option="保暖">保暖</button>
-        <button class="second-btn" data-option="運動">運動</button>
-    </div>
-
-    <div id="third-selection" class="selection hidden">
-        <h2>第三组选择：</h2>
-        <button class="third-btn" data-option="毛衣">毛衣</button>
-        <button class="third-btn" data-option="短袖">短袖</button>
-        <button class="third-btn" data-option="休閑">休閑</button>
-    </div>
-
-    <div id="result">
-        <h2>您的搭配：</h2>
-        <p id="selection-text"></p>
-        <div id="outfit"></div>
-    </div>
-
-    <button id="back-to-home">回到主頁</button>
-
-    <script src="script.js"></script>
-  
 </body>
 </html>
