--- a/index.html
+++ b/index.html
@@ -10,7 +10,17 @@
     html, body {
       margin: 0;
       padding: 0;
+      overflow: hidden;
     }
+    .fullscreen {
+            width: 100vw;
+            height: 100vh;
+            background-color: lightblue;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 2em;
+        }
 
     :root {
       --color-bg1: rgb(107, 200, 255);
